WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265108
Initial <input type=checkbox switch> animation support
https://bugs.webkit.org/show_bug.cgi?id=265108
Summary
Initial <input type=checkbox switch> animation support
Anne van Kesteren
Reported
2023-11-19 08:51:36 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2023-11-19 08:59:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20724
EWS
Comment 2
2023-11-26 05:58:22 PST
Committed
271118@main
(0a64dd544211): <
https://commits.webkit.org/271118@main
> Reviewed commits have been landed. Closing PR #20724 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-11-26 05:59:16 PST
<
rdar://problem/118805169
>
Fujii Hironori
Comment 4
2023-11-26 11:57:06 PST
Windows port can't compile. I'm going to reuse this ticket to fix the problem. C:\webkit\Source\WebCore\rendering\style\RenderStyle.h(381,17): error: inline function 'WebCore::RenderStyle::hasEffectiveAppearance' is not defined [-Werror,-Wundefined-inline] 381 | inline bool hasEffectiveAppearance() const; | ^ C:\webkit\Source\WebCore\html/CheckboxInputType.cpp(143,43): note: used here 143 | ASSERT(element()->renderer()->style().hasEffectiveAppearance()); | ^ 1 error generated.
Fujii Hironori
Comment 5
2023-11-26 12:06:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20910
EWS
Comment 6
2023-11-26 12:10:05 PST
Committed
271125@main
(f3616fd9bff9): <
https://commits.webkit.org/271125@main
> Reviewed commits have been landed. Closing PR #20910 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug