Source/WebCore/platform/graphics/mac/controls/SwitchTrackMac.mm
@@ -28,7 +28,6 @@
 #if PLATFORM(MAC)
 
 #import "SwitchMacUtilities.h"
-#import "SwitchTrackPart.h"
 
 namespace WebCore {
 
@@ -53,53 +52,51 @@ FloatRect SwitchTrackMac::rectForBounds(const FloatRect& bounds, const ControlSt
     return SwitchMacUtilities::rectForBounds(bounds);
 }
 
-void SwitchTrackMac::draw(GraphicsContext& context, const FloatRoundedRect& borderRect, float deviceScaleFactor, const ControlStyle& style)
+static RefPtr<ImageBuffer> trackMaskImage(GraphicsContext& context, FloatSize trackRectSize, float deviceScaleFactor, bool isRTL, NSString * coreUISize)
 {
-    LocalDefaultSystemAppearance localAppearance(style.states.contains(ControlStyle::State::DarkAppearance), style.accentColor);
+    auto drawingTrackRect = NSMakeRect(0, 0, trackRectSize.width(), trackRectSize.height());
+    auto maskImage = context.createImageBuffer(trackRectSize, deviceScaleFactor);
+    if (!maskImage)
+        return nullptr;
 
-    bool isOn = style.states.contains(ControlStyle::State::Checked);
-    bool isRTL = style.states.contains(ControlStyle::State::RightToLeft);
-    bool isEnabled = style.states.contains(ControlStyle::State::Enabled);
-    bool isPressed = style.states.contains(ControlStyle::State::Pressed);
-    bool isInActiveWindow = style.states.contains(ControlStyle::State::WindowActive);
+    auto cgContext = maskImage->context().platformContext();
 
-    auto borderRectRect = borderRect.rect();
-    auto controlSize = controlSizeForSize(borderRectRect.size(), style);
-    auto size = cellSize(controlSize, style);
-    auto outsets = cellOutsets(controlSize, style);
-
-    size.scale(style.zoomFactor);
-
-    auto trackY = std::max(((borderRectRect.height() - size.height()) / 2.0f), 0.0f);
-    auto trackRect = FloatRect { FloatPoint { borderRectRect.x(), borderRectRect.y() + trackY }, size };
-    auto inflatedTrackRect = inflatedRect(trackRect, size, outsets, style);
-    auto drawingTrackRect = NSMakeRect(0, 0, inflatedTrackRect.width(), inflatedTrackRect.height());
-
-    auto trackBuffer = context.createImageBuffer(inflatedTrackRect.size(), deviceScaleFactor);
-    auto trackMaskBuffer = context.createImageBuffer(inflatedTrackRect.size(), deviceScaleFactor);
-
-    if (!trackBuffer || !trackMaskBuffer)
-        return;
-
-    auto cgContext = trackBuffer->context().platformContext();
-    auto cgContextForMask = trackMaskBuffer->context().platformContext();
-
-    auto coreUIState = (__bridge NSString *)(!isEnabled ? kCUIStateDisabled : isPressed ? kCUIStatePressed : kCUIStateActive);
-    auto coreUIValue = @(isOn ? 1 : 0);
-    auto coreUIPresentation = (__bridge NSString *)(isInActiveWindow ? kCUIPresentationStateActiveKey : kCUIPresentationStateInactive);
-    auto coreUISize = SwitchMacUtilities::coreUISizeForControlSize(controlSize);
     auto coreUIDirection = (__bridge NSString *)(isRTL ? kCUIUserInterfaceLayoutDirectionRightToLeft : kCUIUserInterfaceLayoutDirectionLeftToRight);
 
-    GraphicsContextStateSaver stateSaver(context);
+    CGContextStateSaver stateSaver(cgContext);
 
-    [[NSAppearance currentDrawingAppearance] _drawInRect:drawingTrackRect context:cgContextForMask options:@{
+    [[NSAppearance currentDrawingAppearance] _drawInRect:drawingTrackRect context:cgContext options:@{
         (__bridge NSString *)kCUIWidgetKey: (__bridge NSString *)kCUIWidgetSwitchFillMask,
         (__bridge NSString *)kCUISizeKey: coreUISize,
         (__bridge NSString *)kCUIUserInterfaceLayoutDirectionKey: coreUIDirection,
         (__bridge NSString *)kCUIScaleKey: @(deviceScaleFactor),
     }];
 
-    trackBuffer->context().clipToImageBuffer(*trackMaskBuffer, drawingTrackRect);
+    return maskImage;
+}
+
+static RefPtr<ImageBuffer> trackImage(GraphicsContext& context, RefPtr<ImageBuffer> trackMaskImage, FloatSize trackRectSize, float deviceScaleFactor, const ControlStyle& style, bool isOn, bool isRTL, bool isEnabled, bool isPressed, bool isInActiveWindow, bool needsOnOffLabels, NSString * coreUISize)
+{
+    LocalDefaultSystemAppearance localAppearance(style.states.contains(ControlStyle::State::DarkAppearance), style.accentColor);
+
+    auto drawingTrackRect = NSMakeRect(0, 0, trackRectSize.width(), trackRectSize.height());
+
+    auto trackImage = context.createImageBuffer(trackRectSize, deviceScaleFactor);
+
+    if (!trackImage)
+        return nullptr;
+
+    auto cgContext = trackImage->context().platformContext();
+
+    auto coreUIValue = @(isOn ? 1 : 0);
+    auto coreUIState = (__bridge NSString *)(!isEnabled ? kCUIStateDisabled : isPressed ? kCUIStatePressed : kCUIStateActive);
+    auto coreUIPresentation = (__bridge NSString *)(isInActiveWindow ? kCUIPresentationStateActiveKey : kCUIPresentationStateInactive);
+    auto coreUIDirection = (__bridge NSString *)(isRTL ? kCUIUserInterfaceLayoutDirectionRightToLeft : kCUIUserInterfaceLayoutDirectionLeftToRight);
+
+    CGContextStateSaver stateSaver(cgContext);
+
+    // FIXME: clipping in context() might not always be accurate for context().platformContext().
+    trackImage->context().clipToImageBuffer(*trackMaskImage, drawingTrackRect);
 
     [[NSAppearance currentDrawingAppearance] _drawInRect:drawingTrackRect context:cgContext options:@{
         (__bridge NSString *)kCUIWidgetKey: (__bridge NSString *)kCUIWidgetSwitchFill,
@@ -118,11 +115,12 @@ void SwitchTrackMac::draw(GraphicsContext& context, const FloatRoundedRect& bord
         (__bridge NSString *)kCUIScaleKey: @(deviceScaleFactor),
     }];
 
-    if (userPrefersWithoutColorDifferentiation()) {
+    if (needsOnOffLabels) {
         [[NSAppearance currentDrawingAppearance] _drawInRect:drawingTrackRect context:cgContext options:@{
             (__bridge NSString *)kCUIWidgetKey: (__bridge NSString *)kCUIWidgetSwitchOnOffLabel,
             // FIXME: below does not pass kCUIStatePressed like NSCoreUIStateForSwitchState does,
-            // as passing that does not appear to work correctly.
+            // as passing that does not appear to work correctly. Might be related to
+            // rdar://118563716.
             (__bridge NSString *)kCUIStateKey: (__bridge NSString *)(!isEnabled ? kCUIStateDisabled : kCUIStateActive),
             (__bridge NSString *)kCUIValueKey: coreUIValue,
             (__bridge NSString *)kCUIPresentationStateKey: coreUIPresentation,
@@ -132,7 +130,66 @@ void SwitchTrackMac::draw(GraphicsContext& context, const FloatRoundedRect& bord
         }];
     }
 
-    context.drawConsumingImageBuffer(WTFMove(trackBuffer), inflatedTrackRect.location());
+    return trackImage;
+}
+
+void SwitchTrackMac::draw(GraphicsContext& context, const FloatRoundedRect& borderRect, float deviceScaleFactor, const ControlStyle& style)
+{
+    auto isOn = style.states.contains(ControlStyle::State::Checked);
+    auto isRTL = style.states.contains(ControlStyle::State::RightToLeft);
+    auto isEnabled = style.states.contains(ControlStyle::State::Enabled);
+    auto isPressed = style.states.contains(ControlStyle::State::Pressed);
+    auto isInActiveWindow = style.states.contains(ControlStyle::State::WindowActive);
+    auto needsOnOffLabels = userPrefersWithoutColorDifferentiation();
+    auto progress = SwitchMacUtilities::easeInOut(owningPart().progress());
+
+    auto borderRectRect = borderRect.rect();
+    auto controlSize = controlSizeForSize(borderRectRect.size(), style);
+    auto size = cellSize(controlSize, style);
+    auto outsets = cellOutsets(controlSize, style);
+
+    size.scale(style.zoomFactor);
+
+    auto trackY = std::max(((borderRectRect.height() - size.height()) / 2.0f), 0.0f);
+    auto trackRect = FloatRect { FloatPoint { borderRectRect.x(), borderRectRect.y() + trackY }, size };
+    auto inflatedTrackRect = inflatedRect(trackRect, size, outsets, style);
+
+    auto coreUISize = SwitchMacUtilities::coreUISizeForControlSize(controlSize);
+
+    auto maskImage = trackMaskImage(context, inflatedTrackRect.size(), deviceScaleFactor, isRTL, coreUISize);
+    if (!maskImage)
+        return;
+
+    auto createTrackImage = [&](bool isOn) {
+        return trackImage(context, maskImage, inflatedTrackRect.size(), deviceScaleFactor, style, isOn, isRTL, isEnabled, isPressed, isInActiveWindow, needsOnOffLabels, coreUISize);
+    };
+
+    GraphicsContextStateSaver stateSaver(context);
+
+    RefPtr<ImageBuffer> trackImage;
+    if (progress == 0.0f || progress == 1.0f) {
+        trackImage = createTrackImage(progress == 0.0f ? !isOn : isOn);
+        if (!trackImage)
+            return;
+    } else {
+        auto fromImage = createTrackImage(!isOn);
+        if (!fromImage)
+            return;
+        auto toImage = createTrackImage(isOn);
+        if (!toImage)
+            return;
+        trackImage = context.createImageBuffer(inflatedTrackRect.size(), deviceScaleFactor);
+        if (!trackImage)
+            return;
+        // This logic is from CrossfadeGeneratedImage.h, but we copy it to avoid some overhead and
+        // also because that class is not supposed to be used in GPUP.
+        // FIXME: as above, not using context().platformContext() here is likely dubious.
+        trackImage->context().setAlpha(1.0f - progress);
+        trackImage->context().drawConsumingImageBuffer(WTFMove(fromImage), IntPoint(), ImagePaintingOptions { CompositeOperator::SourceOver });
+        trackImage->context().setAlpha(progress);
+        trackImage->context().drawConsumingImageBuffer(WTFMove(toImage), IntPoint(), ImagePaintingOptions { CompositeOperator::PlusLighter });
+    }
+    context.drawConsumingImageBuffer(WTFMove(trackImage), inflatedTrackRect.location());
 }
 
 } // namespace WebCore
