Source/WebKit/Shared/WebCoreArgumentCoders.cpp
@@ -1231,7 +1231,7 @@ void ArgumentCoder<ControlPart>::encode(Encoder& encoder, const ControlPart& par
 
     case WebCore::StyleAppearance::SearchField:
         break;
-            
+
 #if ENABLE(APPLE_PAY)
     case WebCore::StyleAppearance::ApplePayButton:
         encoder << downcast<WebCore::ApplePayButtonPart>(part);
@@ -1262,8 +1262,14 @@ void ArgumentCoder<ControlPart>::encode(Encoder& encoder, const ControlPart& par
     case WebCore::StyleAppearance::SliderThumbHorizontal:
     case WebCore::StyleAppearance::SliderThumbVertical:
     case WebCore::StyleAppearance::Switch:
+        break;
+
     case WebCore::StyleAppearance::SwitchThumb:
+        encoder << downcast<WebCore::SwitchThumbPart>(part);
+        break;
+
     case WebCore::StyleAppearance::SwitchTrack:
+        encoder << downcast<WebCore::SwitchTrackPart>(part);
         break;
     }
 }
@@ -1389,11 +1395,22 @@ std::optional<Ref<ControlPart>> ArgumentCoder<ControlPart>::decode(Decoder& deco
     case WebCore::StyleAppearance::Switch:
         break;
 
-    case WebCore::StyleAppearance::SwitchThumb:
-        return WebCore::SwitchThumbPart::create();
+    case WebCore::StyleAppearance::SwitchThumb: {
+        std::optional<Ref<WebCore::SwitchThumbPart>> switchThumbPart;
+        decoder >> switchThumbPart;
+        if (switchThumbPart)
+            return WTFMove(*switchThumbPart);
+        break;
+    }
 
-    case WebCore::StyleAppearance::SwitchTrack:
-        return WebCore::SwitchTrackPart::create();
+    case WebCore::StyleAppearance::SwitchTrack: {
+        std::optional<Ref<WebCore::SwitchTrackPart>> switchTrackPart;
+        decoder >> switchTrackPart;
+        if (switchTrackPart)
+            return WTFMove(*switchTrackPart);
+        break;
+    }
+
     }
 
     ASSERT_NOT_REACHED();
